add templates for products

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,35 @@
 
 {% block content %}
 
-<h2>Вітаємо на нашому сайті VapeShop!</h2>
+<h2 class="text-center mb-4 mt-5">Вітаємо на нашому сайті VapeShop!</h2>
 
+<section id="start" class="container my-5">
+      <p class="text-center fs-5">В сучасному світі вейпінг стає все популярнішим
+      інтересом серед людей, які
+      шукають альтернативу традиційному курінню. З ростом популярності вейпінгу
+      збільшується і попит на вейп-продукцію та аксесуари. Електронні цигарки,
+      одноразки, вейпи, POD-системи, POD-моди, BOX-моди. Залежно від їх типу,
+      відрізняється і засіб використання, наприклад, у електронних цигарках
+      використовуються табакові стіки(sticks), які нагріваються під дією акумулятора, у
+      той час як для вейпів та POD-систем потрібні рідини сольового чи органічного
+      никотину, які потім перетворюються на приємну пару після їх нагрівання. Саме
+      тому важливо мати зручний та ефективний механізм для покупки та управління
+      продукцією.
+      </p>
+</section>
+<div class="container my-5 text-center">
+  <img src="https://www.vapewholesaleglobal.com/cdn/shop/articles/6-tips-on-choosing-the-ideal-products-for-your-vape-shop.jpg?v=1661226061&width=1200"
+       alt="" class="d-block mx-auto" style="max-width: 100%;">
+</div>
+<section id="about" class="container my-5">
+  <h2 class="text-center mb-4">Про нас</h2>
+  <div class="row">
+    <div class="col">
+      <p class="text-center fs-5">Ми - команда професіоналів, яка працює для вашого задоволення.
+        З нами вейпінг стає ще приємнішим!
+      </p>
+    </div>
+  </div>
+</section>
 
 {% endblock %}
