--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 
-{% block title %}Sign up{% endblock %}
+{% block title %}
+Реєстрація :: {{ block.super }}
+{% endblock %}
 
 {% block content %}
-<h2>Створити аккаунт</h2>
+<h2 class="text-center mb-4 mt-5">Реєстрація</h2>
 <br>
 
 <form method="POST"  action="">
