--- a/templates/base.html
+++ b/templates/base.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{% block title %}Library{% endblock %}</title>
+    <title>{% block title %}VapeShop{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 </head>
 <body>
-<main style="margin:20px;">
+<main>
 
     {% include 'inc/_nav.html' %}
 
@@ -27,8 +27,8 @@
     {% endfor %}
     {% endif %}
 
+    {% block content %} {% endblock %}
 
-    {% block content %}{% endblock %}
 
     <div class="container mt-3" style="margin-left: auto;
     margin-right: auto;
