--- a/templates/inc/_nav.html
+++ b/templates/inc/_nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="navbar navbar-expand-lg bg-light" style="padding: 0 20px;">
     <a class="navbar-brand" href="{%  url 'home' %}">VapeShop</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
