add base filters for products

--- a/shop/templates/products/products_list.html
+++ b/shop/templates/products/products_list.html
@@ -17,7 +17,7 @@
           <img src="https://picsum.photos/id/1060/350/300/?blur=2" alt="" class="card-img-top">
         {% endif %}
         <div class="card-body">
-          <h5 class="card-title">{{ item.title|truncatechars:40 }}</h5>
+          <h5 class="card-title">{{ item.title }}</h5>
             <hr>
             <h6 class="card-text">{{ item.price }} грн</h6>
         </div>
