add logic and templates for orders

--- a/shop/templates/products/product_detail.html
+++ b/shop/templates/products/product_detail.html
@@ -33,7 +33,7 @@
                         <li class="list-group-item"></li>
                     </ul>
 
-                    <a href="#" style="color:white; background-color: black; border: black; margin: 10px 15px"
+                    <a href="{% url 'add_to_cart' product.id %}" style="color:white; background-color: black; border: black; margin: 10px 15px"
                        class="btn btn-primary">Додати в кошик</a>
                 </div>
             </div>
