add orders history

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -8,7 +8,7 @@
 <h2 class="text-center mb-4 mt-5">Авторизація</h2>
 <br>
 
-<form method="POST"  action="">
+<form method="POST"  action="" style="margin: 0 30px">
     {% csrf_token %}
 
     {{ form.as_p }}
