--- a/templates/inc/_nav.html
+++ b/templates/inc/_nav.html
@@ -49,12 +49,15 @@
             {% if request.user.is_authenticated %}
                 <li class="nav-item"><a class="nav-link">|</a></li>
                 <li class="nav-item">
-                    <a class="nav-link" style="color: #912D9B; "href="{% url 'cart' %}">
+                    <a class="nav-link" style="color: #912D9B; " href="{% url 'cart' %}">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
                     <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l.84 4.479 9.144-.459L13.89 4zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
                     </svg>
                     Кошик
                     </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" style="color: #912D9B;" href="{% url 'get_my_orders' %}">Історія замовлень</a>
                 </li>
 
                 {% if request.user.is_staff %}
@@ -70,7 +73,7 @@
 
         {% if request.user.is_authenticated %}
         <span class="navbar-text" style="color:black;">
-            Ласкаво просимо, {{ request.user.email }} !
+            Ласкаво просимо, {{ request.user.firstname }} !
             <a href="{% url 'signout' %}" style="color:white; background-color: black; border: black;" class="btn btn-primary">Вихід</a>
             </span>
         {% else %}
