--- a/shop/templates/orders/cart.html
+++ b/shop/templates/orders/cart.html
@@ -11,9 +11,9 @@
 
   {% if cart_items %}
 
-  <form method="post" style="background-color: #F8F9FA;">
+  <form method="post">
     {% csrf_token %}
-    <table class="table" >
+    <table class="table" style="background-color: #F8F9FA;">
       <thead>
         <tr>
           <th>Назва</th>
@@ -26,7 +26,14 @@
       <tbody>
         {% for item in cart_items %}
         <tr>
-          <td>{{ item.product.title }}<p>{{ item.product.category }}<p/></td>
+          <td>
+            <h6>
+              <a href="{{ item.product.get_absolute_url }}" class="text-decoration-none text-dark">
+                {{ item.product.title }}
+              <a/>
+            </h6>
+            <p>{{ item.product.category }}<p/>
+          </td>
           <td>
             {% if item.product.image %}
             <img src="{{ item.product.image.url }}" width="100" alt="{{ item.product.title }}" class="img-fluid">
@@ -51,8 +58,9 @@
         {% endfor %}
       </tbody>
     </table>
-    <button type="submit" class="btn btn-primary" style="color:white; background-color: black; border: black;">Оформити</button>
+    <a href="{% url 'create_order' order.id %}" style="color:white; background-color: black; border: black;" class="btn btn-primary">Оформити</a>
   </form>
+
   {% else %}
   <p class="text-center fs-5">Ви ще не додали жодного товару до кошику. <a href="{%  url 'home' %}" style="color: #912D9B;">На головну</a></p>
   {% endif %}
