--- a/templates/inc/_nav.html
+++ b/templates/inc/_nav.html
@@ -48,6 +48,22 @@
 
             {% if request.user.is_authenticated %}
                 <li class="nav-item"><a class="nav-link">|</a></li>
+
+                {% if request.user.is_staff %}
+                <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown3" role="button"
+                   data-bs-toggle="dropdown" aria-expanded="false" style="color: #912D9B;">
+                    Дії
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="{% url 'create_category' %}">Додати категорію</a></li>
+                    <li><a class="dropdown-item">Додати товар</a></li>
+                    <li><a class="dropdown-item">Додати помічника</a></li>
+                </ul>
+                </li>
+                    <li class="nav-item"><a class="nav-link" style="color: #912D9B;">Замовлення</a></li>
+
+                {% else %}
                 <li class="nav-item">
                     <a class="nav-link" style="color: #912D9B; " href="{% url 'cart' %}">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
@@ -59,14 +75,12 @@
                 <li class="nav-item">
                     <a class="nav-link" style="color: #912D9B;" href="{% url 'get_my_orders' %}">Історія замовлень</a>
                 </li>
-
-                {% if request.user.is_staff %}
-                    <li class="nav-item"><a class="nav-link" style="color: #912D9B;">Товар</a></li>
-                    <li class="nav-item"><a class="nav-link" style="color: #912D9B;">Категорії</a></li>
-                    <li class="nav-item"><a class="nav-link" style="color: #912D9B;">Користувачі</a></li>
                 {% endif %}
 
             {% endif %}
+
+
+
 
         </ul>
 
