--- a/templates/inc/_nav.html
+++ b/templates/inc/_nav.html
@@ -51,6 +51,15 @@
 
                 {% if request.user.is_staff %}
 
+                <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown5" role="button"
+                   data-bs-toggle="dropdown" aria-expanded="false" style="color: #912D9B;">
+                    Товар
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item" href="{% url 'create_product' %}">Додати товар</a></li>
+                </ul>
+                </li>
 
                 <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown3" role="button"
