--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Реєстрація :: {{ block.super }}
+{{ title }} :: {{ block.super }}
 {% endblock %}
 
 {% block content %}
