--- a/templates/inc/_nav.html
+++ b/templates/inc/_nav.html
@@ -83,7 +83,7 @@
                 </ul>
                 </li>
 
-                <li class="nav-item"><a class="nav-link" style="color: #912D9B;">Замовлення</a></li>
+                <li class="nav-item"><a class="nav-link" style="color: #912D9B;" href="{% url 'order_list' %}">Замовлення</a></li>
 
                 {% else %}
                 <li class="nav-item">
