--- a/shop/templates/orders/orders_history.html
+++ b/shop/templates/orders/orders_history.html
@@ -13,14 +13,14 @@
 {% block content %}
 <div class="container mt-4">
 
-    {% for order, order_details in order_pars.items %}
+    {% for order in orders %}
     <div class="card mb-4">
         <div class="card-header text-white d-flex justify-content-between align-items-center" style="background-color: #912D9B;">
             <div>Статус: {{ order.status|display_status }}</div>
             <div>Замовлено: {{ order.created_at|date:"d.m.Y" }}</div>
         </div>
 
-        {% for detail in order_details %}
+        {% for detail in order.orderdetail_set.all %}
         <div class="row g-0">
             <div class="col-md-3">
                 {% if detail.product.image %}
@@ -46,7 +46,7 @@
         </div>
         {% endfor %}
         <div class="card-footer">
-            <strong>Загалом:</strong> {{ order_details|calculate_order_total }} грн
+            <strong>Загалом:</strong> {{ order.orderdetail_set.all|calculate_order_total }} грн
         </div>
     </div>
     {% endfor %}
